--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Solid State by HTML5 UP</title>
+		<title>Combo v2</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -61,7 +61,7 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">ZAKRES USŁUG:</h2>
+										<h2 class="major">ZAKRES USŁUG</h2>
 										<ul style="list-style-type: none; padding: 0;">
 											<li>Malowanie, tapetowanie</li>
 											<li>Tynkowanie, szpachlowanie</li>
@@ -146,8 +146,8 @@
 				<!-- Footer -->
 					<section id="footer">
 						<div class="inner">
-							<h2 class="major">Czas na zmiany? Zleć nam ich wykonanie.</h2>
-							<p>Skontaktuj się z nami, a my niezwłocznie odpowiemy na Twoje zapytanie. </p>
+							<h2 class="major">Czas na zmiany? Zleć nam ich wykonanie</h2>
+							<p>Skontaktuj się z nami, a my niezwłocznie odpowiemy na Twoje zapytanie </p>
 							<form method="post" action="#">
 								<div class="fields">
 									<div class="field">
