--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/zakres.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">ZAKRES USŁUG</h2>
 										<ul style="list-style-type: none; padding: 0;">
