--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<h1><a href="index.html">COMBO REMONTY</a></h1>
-						<nav>
-							<a href="#menu">Menu</a>
-						</nav>
+<!--						<nav>-->
+<!--							<a href="#menu">Menu</a>-->
+<!--						</nav>-->
 					</header>
 
 				<!-- Menu -->
