nowy opis firmy

--- a/index.html
+++ b/index.html
@@ -47,9 +47,7 @@
 								<img src="images/combo_logo_wh1.png" alt="Logo ikony" class="custom-icon" />
 							</div>
 							<h2>COMBO Remonty</h2>
-							<p>Świadczymy usługi remontowo-wykończeniowe z najwyższą dbałością
-								o estetykę, jakość i detale. Dzięki wieloletniemu doświadczeniu i indywidualnemu podejściu
-								realizujemy projekty w sposób solidny, terminowy i w pełni dopasowany do oczekiwań klienta.</p>
+							<p>Zajmujemy się kompleksowymi remontami, stawiając na solidność, wysoką jakość wykonania i precyzyjne wykończenie. Każdy projekt traktujemy indywidualnie, dostosowując się do potrzeb i wizji naszych klientów.</p>
 						</div>
 					</section>
 
